push to render.com

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,10 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postresql
+  encoding: unicode
+  pool: 5
+  database: aiueo
+  username: aiueo_user
+  password: <%= ENV['MYSITE_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
