--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ test:
 
 production:
   <<: *default
-  adapter: postresql
+  adapter: postgresql
   encoding: unicode
   pool: 5
   database: aiueo
